--- a/templates/faq.html
+++ b/templates/faq.html
@@ -10,7 +10,7 @@
     <h2>{{ _('What is the current list of collected attributes?') }}</h2>
     <table class="table table-striped table-hover " xmlns="http://www.w3.org/1999/html"
         data-intro="Here is the complete list of attributes that are collected when you visit the 'My fingerprint' page. This table is
-         autmoatically updated when a new attribute is added to the test suite. If you need additional information, do not hesitate to
+         automatically updated when a new attribute is added to the test suite. If you need additional information, do not hesitate to
          click on the given URLs as they will explain to you in greater details the use of some attributes.">
         <thead>
             <tr>
@@ -46,6 +46,13 @@
             });
         }
     </script>
+
+    <h2>I'm interested in studying X but it is not present in the test suite. What can I do?</h2>
+    You can open an issue on GitHub <a href="https://github.com/plaperdr/fp-central/issues" target="_blank">HERE <i class="fa fa-external-link"></i></a> telling
+    us you want that attribute to be added and why. You can also directly send us a Pull Request with the right code by following the
+    imposed file format described <a href="https://github.com/plaperdr/fp-central/blob/master/fingerprint/attributes/README.md" target="_blank">HERE <i class="fa fa-external-link"></i></a>.
+    In both cases, the relevance of the attribute will be discussed before it is accepted. This step is needed to make sure that the test suite does not become too heavy
+    by having dozens of uninteresting attributes.
 
 
 
