--- a/templates/faq.html
+++ b/templates/faq.html
@@ -47,12 +47,12 @@
         }
     </script>
 
-    <h2>I'm interested in studying X but it is not present in the test suite. What can I do?</h2>
-    You can open an issue on GitHub <a href="https://github.com/plaperdr/fp-central/issues" target="_blank">HERE <i class="fa fa-external-link"></i></a> telling
+    <h2>{{ _('I\'m interested in studying X but it is not present in the test suite. What can I do?') }}</h2>
+    {{ _('You can open an issue on GitHub <a href="https://github.com/plaperdr/fp-central/issues" target="_blank">HERE <i class="fa fa-external-link"></i></a> telling
     us you want that attribute to be added and why. You can also directly send us a Pull Request with the right code by following the
     imposed file format described <a href="https://github.com/plaperdr/fp-central/blob/master/fingerprint/attributes/README.md" target="_blank">HERE <i class="fa fa-external-link"></i></a>.
     In both cases, the relevance of the attribute will be discussed before it is accepted. This step is needed to make sure that the test suite does not become too heavy
-    by having dozens of uninteresting attributes.
+    by having dozens of uninteresting attributes.') }}
 
 
 
