--- a/templates/about.html
+++ b/templates/about.html
@@ -11,18 +11,18 @@
         <h1 data-step="2"
             data-intro="Thank you for taking the complete tour of Fingerprint Central! Now, since you know how to use the site to its fullest
              potential, why not go on the 'My fingerprint' page to see how your very own browser fingerprint compares with other ones?">
-            About
+            {{ _('About') }}
         </h1>
         <div data-intro="You can find here more information on Fingerprint Central and on the Tor project with some helpful links.
             Do not hesitate to contribute to the website, all the code is on GitHub!" data-steo="1">
-            <h2>Who is behind this project?</h2>
+            <h2>{{ _('Who is behind this project?') }}</h2>
             <h4>
-            <strong>Fingerprint Central</strong> is developed by
+            <strong>Fingerprint Central</strong> {{ _('is developed by') }}
             <a href="https://github.com/plaperdr" target="_blank">Pierre Laperdrix <i class="fa fa-external-link" aria-hidden="true"></i></a>
-            for the Tor project as part of the Google Summer of Code 2016 .
-            You can find the complete source code and contribute to it on GitHub.
+            {{ _('for the Tor project as part of the Google Summer of Code 2016 .
+            You can find the complete source code and contribute to it on GitHub.') }}
             </h4>
-            <h2>Links</h2>
+            <h2>{{ _('Links') }}</h2>
             <div class="col-sm-4 col-md-4 text-center">
                 <div class="thumbnail">
                     <img src="static/images/tor-logo.png" class="img-responsive" style="width: 80%">
@@ -32,7 +32,7 @@
                         <p>
                             <a href="https://www.torproject.org/" class="btn btn-primary" role="button">
                                 <i class="fa fa-external-link" aria-hidden="true"></i>
-                                &nbsp;Official website
+                                &nbsp;{{ _('Official website') }}
                             </a>
                         </p>
                     </div>
@@ -47,12 +47,12 @@
                         <p>
                             <a href="https://summerofcode.withgoogle.com/" class="btn btn-primary" role="button">
                                 <i class="fa fa-google" aria-hidden="true"></i>
-                                &nbsp;Official website
+                                &nbsp;{{ _('Official website') }}
                             </a>
                             <br><br>
                             <a href="https://summerofcode.withgoogle.com/projects/#5574889654190080" class="btn btn-primary" role="button">
                                 <i class="fa fa-external-link" aria-hidden="true"></i>
-                                &nbsp;Link to project
+                                &nbsp;{{ _('Link to project') }}
                             </a>
                         </p>
                     </div>
@@ -62,12 +62,12 @@
                 <div class="thumbnail">
                     <img src="static/images/fpc-logo-cut.png" class="img-responsive" style="width: 100%">
                     <div class="caption">
-                        <h3>Fingerprint Central <br> source code</h3>
+                        <h3>{{ _('Fingerprint Central <br> source code') }}</h3>
                         <br>
                         <p>
                             <a href="https://github.com/plaperdr/fp-central" class="btn btn-primary" role="button">
                                 <i class="fa fa-github-alt" aria-hidden="true"></i>
-                                &nbsp;View on GitHub
+                                &nbsp;{{ _('View on GitHub') }}
                             </a>
                         </p>
                     </div>
